# Ascent

./: .gitignore  .metadata  README.md  flutter_rust_bridge.yaml  pubspec.yaml
.github/workflows/: github-releases-to-discord.yml
android/: build.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/cafe/f403/ascent/: MainActivity.java
android/app/src/main/res/xml/: file_paths.xml
assets/translations/: en-US.json  zh-CN.json  zh.json
integration_test/: simple_test.dart
lib/: bridge_definitions.dart  bridge_definitions.freezed.dart  bridge_generated.dart  constants.dart  ffi.dart  global_state.dart  logger.dart  main.dart  route.dart  routes.dart  state.dart  updater.dart
lib/about/: about.dart  logic.dart  view.dart
lib/components/bottom_navigation_bar/: logic.dart  view.dart
lib/connect/: connecting.dart  logic.dart  view.dart
lib/floatingwindow/: view.dart
lib/foreground/: connect.dart  pair.dart  rootConnect.dart  root_connect.dart
lib/home/: view.dart
lib/l10n/: intl_en.arb  intl_zh.arb
lib/native/: api.dart  bridge_generated.dart  bridge_generated.freezed.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/pages/connect/: logic.dart  view.dart
lib/pages/home/: logic.dart  view.dart
lib/pages/info/: logic.dart  view.dart
lib/pages/pair/: logic.dart  view.dart
lib/pair/guide/: pairing_guide.dart  view.dart
lib/pair/pair/: pairing.dart  pairing_notification.dart  pairing_window.dart
lib/pair/pair/pairing_window/: logic.dart
lib/pairing/guide/: logic.dart  view.dart
lib/pairing/pair/: pairing.dart  view.dart
lib/utils/: adb_utils.dart  device_info_utils.dart
native/: Cargo.toml
native/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  connect.rs  lib.rs  pair.rs
rust/: Cargo.toml
rust/src/: api.rs  connect.rs  frb_generated.rs  lib.rs  pair.rs
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+2 files in other folders)
