[package]
name = "native"
version = "2.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flutter_rust_bridge = "1"
anyhow = { version = "1.0.75", features = ["backtrace"] }
bytebuffer = "2.2.0"
hex = "0.4.3"
hkdf = "0.12.3"
spake2 = "0.4.0"
tokio = { version = "1.34.0", features = ["full"] }
sha2 = "0.10.8"
boring = { git = "https://github.com/4o3F/boring.git", branch = "cmake-msvc" }
tokio-boring = { git = "https://github.com/4o3F/boring.git", branch = "cmake-msvc" }
log = "0.4.20"
regex = { version = "1.10.2", features = [] }
android_logger = "0.13.3"

[lib]
crate-type = ["staticlib", "cdylib"]