[package]
name = "rust_lib_ascent"
version = "2.1.4"
edition = "2021"

[dependencies]
flutter_rust_bridge = "=2.0.0-dev.24"
anyhow = { version = "1.0.75" }
bytebuffer = "2.2.0"
hex = "0.4.3"
hkdf = "0.12.3"
spake2 = "0.4.0"
tokio = { version = "1.34.0", features = ["full"] }
sha2 = "0.10.8"
boring = { git = "https://github.com/4o3F/boring.git" }
tokio-boring = { git = "https://github.com/4o3F/boring.git" }
log = "0.4.20"
regex = { version = "1.10.2", features = [] }
android_logger = "0.13.3"


[lib]
crate-type = ["cdylib", "staticlib"]

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1